--- a/src/main/resources/report.jrxml
+++ b/src/main/resources/report.jrxml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.17.0.final using JasperReports Library version 6.17.0-6d93193241dd8cc42629e188b94f9e0bc5722efd  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="employees" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ea9d9eab-78ea-4cb9-adce-7588ae6a483e">
+<!DOCTYPE jasperReport PUBLIC
+        "//JasperReports//DTD Report Design//EN"
+        "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
+              name="Comments" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="868819c0-2e1e-457b-84c5-82067f527855">
+
+
+    <parameter name="logo" class="java.lang.Object">
+        <defaultValueExpression><![CDATA["logo"]]></defaultValueExpression>
+    </parameter>
+
     <field name="id" class="java.lang.Long"/>
     <field name="name" class="java.lang.String"/>
     <field name="email" class="java.lang.String"/>
     <field name="body" class="java.lang.String"/>
+
     <background>
         <band/>
     </background>
+
     <title>
         <band height="72">
             <frame>
@@ -17,16 +30,16 @@
                     <textElement textAlignment="Center" verticalAlignment="Middle">
                         <font size="14" isBold="false"/>
                     </textElement>
-                    <text><![CDATA[Employee Reports]]></text>
+                    <text><![CDATA[Comments Reports]]></text>
                 </staticText>
                 <image>
                     <reportElement x="250" y="10" width="50" height="50" uuid="ec2960aa-09cf-47e0-8290-320136417bd9"/>
-<!--                    <imageExpression><![CDATA[$P{logo}]]></imageExpression>-->
-                    <imageExpression><![CDATA["src/main/resources/assets/nisLOGO.jpeg"]]></imageExpression>
+                    <imageExpression><![CDATA[$P{logo}]]></imageExpression>
                 </image>
             </frame>
         </band>
     </title>
+
     <pageHeader>
         <band height="13"/>
     </pageHeader>
